# konfig-master

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: workflow.yml
konfig_master/: __init__.py  core.py
tests/: settings.json  settings.toml  settings.yaml  test_loading.py
