[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "konfig-master"
version = "0.1.0"
authors = [
  { name="Your Name", email="your.email@example.com" },
]
description = "A simple, unified interface for managing application configuration."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["config", "configuration", "yaml", "json", "toml", "settings"]

# Add your package's dependencies here
dependencies = [
    "PyYAML>=6.0",
    "toml>=0.10.2",
    # We will add pydantic later for validation
    # "pydantic>=2.0",
    # "python-dotenv>=1.0"
]

[project.urls]
"Homepage" = "https://github.com/your-username/config-master"
"Bug Tracker" = "https://github.com/your-username/config-master/issues"